2008-03-31  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #7954: XCLASSing ToolbarItem does not work (thanks to Steffen Kamper)
	* Fixed bug #7759: XCLASSing USER_INT objects does not work

2008-03-31  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #7920: Filelist in IE 6 is not showing contents (thanks to Ingo Schmitt and Steffen Kamper)
	* Fixed bug #7957: Enable backend classes for xclassing (thanks Steffen Kamper)
	* Fixed bug #7962: Add icon to selected entry (currently icons are only shown in dropdown) (thanks to Kasper Ligaard)

2008-03-28  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7955: htmlArea RTE API provides incorrect popup url
	* Fixed bug #7958: htmlArea RTE undo/redo handler may cause errors in FF

2008-03-28  Oliver Hader  <oliver@typo3.org>

	* Added follow up to #7947: Changed order of applying locallang file back

2008-03-27  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #7947: IRRE - XCLASSes are not working with AJAX calls in t3lib_TCEforms_inline (thanks to Malte Jansen)

2008-03-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7944: htmlArea RTE: Configuration of mutually exclusive classes in very error prone
	* Fixed bug #7769: htmlArea RTE: Missing default class for tables

2008-03-24  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7934: HTMLArea RTE block style and text style may present disallowed classes

2008-03-24  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: Field sys_template.include_static_file limited to 20 items

2008-03-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7923: htmlArea RTE cannot delete block via delete/backspace keys in IE 6 and IE7

2008-03-21  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #4250: ASCII transliteration did not expand Iclandic letters thorn and eth.
	* Fixed bug #7903: Use PHP5 features in class.t3lib_extmgm.php (final and static, thanks to Kasper Ligaard)
	* Fixed bug #7906: Use PHP5 features in class.t3lib_befunc.php (final and static, thanks to Kasper Ligaard))