@@ -2,6 +2,7 @@
 
 	* Fixed bug #7954: XCLASSing ToolbarItem does not work (thanks to Steffen Kamper)
 	* Fixed bug #7759: XCLASSing USER_INT objects does not work
+	* Cleaned up code of scripts in typo3/classes/
 
 2008-03-31  Dmitry Dulepov  <dmitry@typo3.org>
 
